--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
       </div>
     </div>
   </body>
+  <script type="text/javascript" src="src/adapter.js"></script>
+  <script type="text/javascript" src="src/domController.js"></script>
   <script type="text/javascript" src="src/index.js"></script>
   <script type="text/javascript" src="src/hog.js"></script>
 </html>
