--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hogs</title>
+    <title>Sweet Pig Babies</title>
+
+    <script type="text/javascript" src="src/hog.js"></script>
+    <script type="text/javascript" src="src/adapter.js"></script>
+    <script type="text/javascript" src="src/index.js"></script>
 
     <style media="screen">
        body {
       font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
       font-weight: 300;
+      }
+
+      img {
+        max-width: 300px;
       }
 
       h1{
@@ -29,7 +37,7 @@
       justify-content: center;
       text-align: center;
       }
-      
+
       .hog-card{
         float:left;
         width:393px;
@@ -69,6 +77,4 @@
       </div>
     </div>
   </body>
-  <script type="text/javascript" src="src/index.js"></script>
-  <script type="text/javascript" src="src/hog.js"></script>
 </html>
