--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       justify-content: center;
       text-align: center;
       }
-      
+
       .hog-card{
         float:left;
         width:393px;
@@ -69,6 +69,8 @@
       </div>
     </div>
   </body>
-  <script type="text/javascript" src="src/index.js"></script>
-  <script type="text/javascript" src="src/hog.js"></script>
+  <script defer type="text/javascript" src="src/hog.js"></script>
+  <script defer type="text/javascript" src="src/fetch.js"></script>
+  <script defer type="text/javascript" src="src/helpers.js"></script>
+  <script defer type="text/javascript" src="src/index.js"></script>
 </html>
