--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       justify-content: center;
       text-align: center;
       }
-      
+
       .hog-card{
         float:left;
         width:393px;
@@ -50,22 +50,23 @@
       <div id="form">
         <h3>New Hog</h3>
         <form id="hog-form">
-          <input type="text" name="name" placeholder="name"/>
+          <input id="nameInput" type="text" name="name" placeholder="name"/>
           <br/>
-          <input type="text" name="specialty" placeholder="specialty"/>
+          <input id="specialtyInput" type="text" name="specialty" placeholder="specialty"/>
           <br/>
-          <input type="text" name="medal" placeholder="medal"/>
+          <input id="medalInput" type="text" name="medal" placeholder="medal"/>
           <br/>
-          <input type="text" name="weight" placeholder="weight"/>
+          <input id="weightInput" type="text" name="weight" placeholder="weight"/>
           <br/>
-          <input type="text" name="img" placeholder="img url"/>
+          <input id="imageInput" type="text" name="img" placeholder="img url"/>
           <br/>
-          <span>greased: <input type="checkbox" name="greased" value="greased"></span>
+          <span>greased: <input id="greased" type="checkbox" name="greased" value="greased"></span>
           <br/>
           <input type="submit" value="Submit"/>
         </form>
       </div>
       <div id="hog-container">
+
       </div>
     </div>
   </body>
